<resources>
    <string name="app_name">Step-O-Meter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">Step-O-Meter</string>
    <string name="txt_user_registration">User Registration</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_height">Height (ft.)</string>
    <string name="hint_weight">Weight (kg.)</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <string name="radio_male_txt">Male</string>
    <string name="radio_female_txt">Female</string>
    <string name="btn_register_txt">REGISTER</string>
    <string name="name_length_error_msg">Name should be 3-30 characters long !!</string>
    <string name="empty_name_error_msg">Name cannot be empty !!</string>
    <string name="invalid_weight_error_msg">Invalid Weight !!</string>
    <string name="empty_weight_error_msg">Empty Weight !!</string>
    <string name="empty_dob_error_msg">Date of Birth cannot be empty !!</string>
    <string name="invalide_height_error_msg">Invalid Height !!</string>
    <string name="empty_height_error_msg">Empty Height !!</string>
    <string name="enpty_gender_msg">Please Select Gender !!</string>
    <string name="name_isalpha_error_msg">Only alphabets allowed !!</string>
    <string name="age_restrict_error_msg">Minimum Age required is 13 yrs !!</string>
    <string name="total_steps_label">Total Steps</string>
    <string name="distance_label">Distance (kms)</string>
    <string name="calories_label">Calories (cal)</string>
    <string name="speed_label">Speed (m/s)</string>
    <string name="floors_label">Floors</string>
    <string name="toolbar_title">Today</string>
    <string name="btn_update_label">Update</string>
    <string name="no_sensor_msg">No Sensor Detected !!</string>
    <string name="profile_height_label">Height</string>
    <string name="profile_weight_label">Weight</string>
    <string name="account_info_label">Account Info</string>
    <string name="PREF_NAME">PREF_USER_NAME</string>
    <string name="PREF_DOB">PREF_USER_DOB</string>
    <string name="PREF_GENDER">PREF_GENDER</string>
    <string name="PREF_AGE">PREF_USER_AGE</string>
    <string name="PREF_HEIGHT">PREF_USER_HEIGHT</string>
    <string name="PREF_WEIGHT">PREF_USER_WEIGHT</string>
    <string name="IS_REGISTERED">IsRegistered</string>
    <string name="steps_completed_label">Steps Completed</string>
    <string name="permission_explanation_msg">App needs Storage Permission to work properly</string>
    <string name="goto_settings_msg"><![CDATA[You have denied some permissions. Grant permissions at [Settings] > [Permissions]]]></string>
    <string name="gender_label">Gender</string>
    <string name="set_goal_label">Set Goal :</string>
    <string name="PREF_USER_GOAL">PREF_USER_GOAL</string>
</resources>
