<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimaryDark"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".Activities.RegistrationActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_height="match_parent"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="120dp"
            android:src="@drawable/ic_splash_screen"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            android:layout_gravity="center"
            android:nestedScrollingEnabled="true"
            android:elevation="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:text="@string/txt_user_registration"
                        android:layout_width="match_parent"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_text_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_person_28dp"
                            android:hint="@string/hint_enter_name"
                            android:imeOptions="actionNext"
                            android:maxLength="25"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="8dp"
                        android:id="@+id/dob_text_input"
                        app:errorEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dob_edit_text"
                            android:hint="@string/hint_date_of_birth"
                            android:editable="false"
                            android:clickable="true"
                            android:focusable="false"
                            android:drawableEnd="@drawable/ic_calendar_28dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/height_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/height_edit_text"
                                android:hint="@string/hint_height"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionNext"
                                android:maxLength="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/weight_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/weight_edit_text"
                                android:hint="@string/hint_weight"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionDone"
                                android:maxLength="3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <RadioGroup
                        android:id="@+id/rg_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_male_txt"/>
                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_female_txt"/>
                    </RadioGroup>


                    <Button
                        android:layout_marginTop="16dp"
                        android:id="@+id/btn_register"
                        android:text="@string/btn_register_txt"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textColor="#FFFFB500"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </FrameLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>

</FrameLayout>