<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#e0e0e0"
        android:layout_height="match_parent">

            <RelativeLayout
                android:layout_above="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">
                <TextView
                    android:id="@+id/tvStepsData"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="64sp"
                    android:textStyle="bold"
                    tools:text="0"/>

                <TextView
                    android:id="@+id/tvStepsLabel"
                    android:layout_below="@+id/tvStepsData"
                    android:layout_width="match_parent"
                    android:text="@string/total_steps_label"
                    android:layout_marginTop="4dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/llRecordContainer1"
                    android:layout_below="@+id/tvStepsLabel"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:progressDrawable="@drawable/progress_bar"
                        tools:progress="100"
                        android:max="100"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"/>

                    <RelativeLayout
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="0"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"/>
                        <TextView
                            android:text="@string/steps_completed_label"
                            android:layout_marginTop="16dp"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"/>
                        <TextView
                            tools:text="1000"
                            android:id="@+id/tvGoalSteps"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:orientation="horizontal">
                        <com.google.android.material.card.MaterialCardView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:elevation="8dp"
                            app:cardCornerRadius="8dp"
                            android:layout_margin="16dp">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <TextView
                                        android:id="@+id/tvDistanceData"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:padding="16dp"
                                        android:textSize="32sp"
                                        android:text="0" />

                                    <View
                                        android:layout_marginTop="4dp"
                                        android:layout_width="match_parent"
                                        android:layout_height="1dp"
                                        android:background="@android:color/darker_gray"/>

                                    <TextView
                                        android:id="@+id/tvStepsText"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:padding="8dp"
                                        android:textSize="16sp"
                                        android:text="@string/distance_label" />
                                </LinearLayout>
                            </FrameLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:elevation="8dp"
                            app:cardCornerRadius="8dp"
                            android:layout_margin="16dp">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <TextView
                                        android:id="@+id/tvCaloriesData"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:padding="16dp"
                                        android:textSize="32sp"
                                        android:text="0" />

                                    <View
                                        android:layout_marginTop="4dp"
                                        android:layout_width="match_parent"
                                        android:layout_height="1dp"
                                        android:background="@android:color/darker_gray"/>

                                    <TextView
                                        android:id="@+id/tvCaloriesLabel"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:padding="8dp"
                                        android:textSize="16sp"
                                        android:text="@string/calories_label" />
                                </LinearLayout>
                            </FrameLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    app:rippleColor="#8d6e63"
                    android:clickable="true"
                    app:borderWidth="0dp"
                    android:src="@drawable/ic_footprints"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="10dp"/>

            </RelativeLayout>

    </RelativeLayout>

</FrameLayout>